tests/paczka1/fuzzy1/61334467.err
Error in line 2: 1Nh AP31 67,6
Error in line 15: Ql7owQY8 A585 7,5
Error in line 20: Ql7owQY8 S841 48,5
Error in line 10: 1Nh A431 285,9
Error in line 30: Ql7owQY8 S44 29,9
Error in line 39: 1Nh A585 -3,2
